# TAI_Projects

./: .gitignore  Cargo.toml  README.md  comparative_nrc_results.json  generate_visualizations.sh  run_meta.sh
data/: db_test.txt  meta.txt  meta_1.txt  meta_100.txt  meta_2.txt  meta_25.txt  meta_3.txt  meta_4.txt  meta_5.txt  meta_50.txt  meta_75.txt  meta_mutate.txt  meta_random.txt  meta_varying_mutation_0.txt  meta_varying_mutation_1.txt  meta_varying_mutation_100.txt  meta_varying_mutation_2.txt  meta_varying_mutation_25.txt  meta_varying_mutation_3.txt  meta_varying_mutation_4.txt  meta_varying_mutation_5.txt  meta_varying_mutation_50.txt  meta_varying_mutation_75.txt  test_meta.txt
data/sequences/: sequence1.txt  test_sequence.txt
examples/: generator5.sh
examples/fcm/: fcm1.sh  fcm2.sh  fcm3.sh  fcm4.sh  fcm5.sh
gto/: compare_execution_time.py  compare_mutations.py  generate_heatmap.py  generate_meta.sh  piton.py  requirements.txt
image_results/: samples_images.sh  samples_images_quant.sh
sequences/: sequence1.txt  sequence2.txt  sequence5.txt  sequence6.txt  sequence7.txt
src/: audio_reader.rs  chart_generator.rs  compressors.rs  data_base_processor.rs  fcm.rs  file_reader.rs  finite_context_model.rs  finite_context_model_audio.rs  finite_context_model_byte.rs  finite_context_model_image.rs  finite_context_model_words.rs  image_processor.rs  lib.rs  main.rs  model_saver_loader.rs  ncd.rs  nrc_calculator.rs  text_generator.rs
tests/: audio_batch_results.csv  meta.sh  meta_results.csv  meta_results_debug.csv  meta_results_release.csv
(+54 files in other folders)
