[package]
name = "tai_projects"
version = "0.1.0"
edition = "2021"

[lib]
name = "tai_projects"
path = "src/lib.rs"

[dependencies]
argparse = "0.2.2"
plotters = "0.3.7"
rand = "0.9.0"
serde = { version="1.0", features = ["derive"]}
serde_json = "1.0.139"
bson = "2.0"
opencv = "0.94.4"
regex = "1.11.1"
hound = "3.5.1"
rustfft = "6.3.0"
flate2 = "1.1.1"
bzip2 = "0.5.2"
xz2 = "0.1.7"
zstd = "0.13.3"
lzma-rs = "0.3"